maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:25: error: ';' expected but ')' found.
    setIndication(x, y - 1) == 9999) {
                                   ^